# svelte_bank_form

./: .gitignore  LICENSE  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: docker.yml  pre-commit.yml
docker/: assurland.Dockerfile  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  zenioo.Dockerfile
frontend/: .gitignore  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  vite.config.ts
frontend/src/: app.html  hooks.client.ts  hooks.server.ts
frontend/src/data/: select.js
frontend/src/lib/: config.ts  format.js  utils.js
frontend/src/lib/api/: api.ts  models.ts
frontend/src/lib/components/: BackwardButton.svelte  Button.svelte  Card.svelte  CardResult.svelte  CustomInput.svelte  DateInput.svelte  ForwardButton.svelte  Loading.svelte  ProgressBar.svelte  Radio.svelte  Results.svelte  SelectComponent.svelte  SelectComponentSlots.svelte  StepComponent.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  styles.css
services/: assurland.py  backend.py  zenioo.py
services/assurland/: config.py  converter.py  locustfile.py  main.py
services/assurland/auth/: auth.py
services/assurland/database/: db.py
services/assurland/models/: input.py  output.py  result.py
services/assurland/query/: result.py  simulation.py
services/assurland/routes/: adhesion.py  simulation.py
services/backend/: __version__.py  config.py  crm.py  database.py  main.py
services/backend/routes/: adhesion.py  simulation.py
services/common/models/: result.py  simulation.py
services/zenioo/: README.md  api.py  config.py  main.py  models.py  to_zenioo_api.py
(+9 files in other folders)
